# Skeptic-Engine-2026-

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  MANUSCRIPT_CITATION_MAP.md  MANUSCRIPT_v03.md  PROJECT_CANON.md  QWEN_METHODOLOGY.md  README.md  RELEASE_CHECKLIST.md  REPORT.html  REPORT.md  SESSION_REPORT_2026-03-30.md  ZENODO_PACKAGING.md  demo_colab.ipynb  pitch_bradshaw_v2.md  pyproject.toml  Агентный поиск междисциплинарных гипотез.md  Прорывные Гипотезы  Трансдисциплинарный Анализ Биологии, Материаловедения и Теории Управления.md  потенциал проекта.docx
.github/workflows/: ci.yml
.qwen/: settings.json
claims/: artifact_inventory.v0.2.0.json  publication_canonical_index.v0.2.0.json  publication_claim_matrix.v0.2.0.json
data/benchmarks/: h10_mvp_spec.json  h4_mvp_spec.json
data/candidates/: challenged_candidates.json  report_top10_candidates.json  skeptic_reviews.json  top5_skeptic_reviews.json
data/h4_audit/: GSE164897_metadata.json
data/manifests/: biorxiv_latest.json  seed_sources.json  zenodo_latest.json
data/top5/: curated_top5_board.json
docs/: ARCHCODE_VERSION_COMPARISON.md  GITHUB_SHOWCASE_AUDIT.md  README.md  appendix-archcode-governance-lessons.md  decision-memo-top5.md  domain-seed-notes.md  h10-baseline-matrix.md  h10-benchmark-conclusion.md  h10-benchmark-plan.md  h10-data-contract.md  h10-descriptor-baseline.md  h10-descriptor-tree-baseline.md  h10-graph-artifact.md  h10-graph-baseline.md  h10-graph-mpnn-baseline.md  h10-hybrid-baseline.md  h10-result-memo.md  h4-audit-report.md  h4-benchmark-plan.md  h4-data-contract.md  h4-dataset-decision.md  mrm_architecture.md  mrm_cli_reference.md  mrm_data_contract.md  mrm_eval_protocol.md  mrm_failure_taxonomy.md  mrm_negative_results.md  mrm_prd.md  mvp-roadmap.md  project-brief.md  report-ingestion-notes.md  research-contract.md  source-manifest-spec.md  toolkit_mvp.md  working-contract.md
docs/templates/: IMPLEMENTED_VERIFIED_TEMPLATE.md
docs/verification/: H1-koopman-idp-llps.md  H10-mof-synthesizability.md  H2-ph-glass-transition.md  H20-ph-soc-degradation.md  H4-tda-cancer-resistance.md  skeptic-latest.md  top5-skeptic-latest.md
eval/: README.md  runner.py
eval/tasks/: 01_bugfix_hash_lowercase.yaml  02_feature_verify_cli.yaml  03_security_pii_redaction.yaml  04_refactor_hash_streaming.yaml  05_test_zenodo_api_error.yaml
experiments/: dashboard.py  run_bootstrap_ci.py
experiments/bootstrap_results/: bootstrap_ci.json
experiments/h23_phacking_behavioral/: README.md  pitch_nuijten.md  run_h23.py  run_h23_extract.py  run_h23_pmc_recompute.py  run_h23_pmc_statcheck.py  run_h23_real.py  run_h23_statcheck.py
experiments/h24_benford_scrna/: H24_manuscript_v01.md  H24_manuscript_v02.md  collaboration_pitch.md  digit_features.py  fabrication.py  generate_figures.py  isolation_forest.py  paper_outline.md  pitch_bik.md  pitch_bradshaw.md  pitch_targets.md  run_adversarial.py  run_combined.py  run_cross_tissue.py  run_crossval.py  run_feature_importance.py  run_h24.py  run_normalized_crossval.py  run_qc_baseline.py  run_statistical_robustness.py
experiments/h25_banking_ae_lcms/: run_h25.py  run_h25_cross_omics.py
experiments/h26_geo_screening/: curated_datasets.json  format_loaders.py  geo_api.py  run_h26.py  run_h26_curated.py  run_h26_injection_test.py  run_h26_mass_screen.py  run_h26_selfcheck.py
experiments/h27_clinical_trials/: clinicaltrials_api.py  run_h27.py
experiments/h28_paper_mills/: metadata_features.py  retraction_api.py  run_h28.py
experiments/h29_biological_syndromes/: constraint_builder.py  generate_h29_figures.py  run_h29.py  run_h29_bioai_validation.py  run_h29_biology_detector.py  run_h29_h24_portability.py  run_h29_module_breaking.py  syndrome_features.py
experiments/h30_retracted_validation/: find_retracted_geo.py  run_h30_syndrome.py
experiments/h31_unified_anomaly_score/: README.md  run_h31.py
experiments/h32_temporal_drift/: README.md  run_h32.py  run_h32_real_pubmed.py
experiments/h33_cross_modal_consistency/: README.md  run_h33.py
experiments/h34_calibrated_uncertainty/: run_h34.py
experiments/h35_mpemba_thresholds/: run_h35.py
experiments/h36_debate_verdict/: run_h36.py
experiments/h37_instinct_memory/: run_h37.py
experiments/h38_causal_refutation/: README.md  run_h38.py
experiments/h4_tda_cancer/: run_h4.py
experiments/mrm_bench_v01/: run_bench_v01.py  run_calibration_test.py  run_smoke_test.py
experiments/mrm_real_data/: README.md  fetch_mp_data.py  fetch_real_data.py  run_cross_validation.py  run_mattersim_calibration.py  run_mattersim_real.py  run_phononbench_calibration.py  run_threshold_optimization.py
manuscript/: PREPRINT_STRUCTURE.md  PREPRINT_v01.md  manuscript.tex  references.bib
parked/: github-scout-findings-2026-06-05.md  skeptic-transfer-plan.md
prompts/: interdisciplinary_discovery_v2.md
scripts/: check_redflags.py  h4_gse164897_audit.py  h4_series_preview.py  skeptic_toolkit.py  validate_publication_claims.py
src/discovery_engine/: __init__.py  enums.py  main.py
src/skeptic_engine/: __init__.py
src/skeptic_mrm/: README.md  __init__.py  cli.py  falsification.py  generator_adapters.py  ingest.py  normalize.py  reports.py  runner.py  scoring.py  (+2 more)
tests/: conftest.py  test_calibration.py  test_cli.py  test_debate.py  test_h31_uas.py  test_h32_temporal.py  test_h33_cross_modal.py  test_h4_status.py  test_instinct_memory.py  test_integrity.py  test_mrm.py  test_smoke.py  test_threshold_optimizer.py  test_utils.py
(+181 files in other folders)
