[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skeptic-engine"
version = "0.1.1"
description = "Statistical artifact detection for scientific data integrity."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  { name = "Sergey V. Boiko", email = "sergeikuch80@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "scikit-learn>=1.3,<2",
]

[project.optional-dependencies]
h24 = ["matplotlib", "h5py"]
h25 = ["torch", "pandas", "matplotlib"]
h4 = ["ripser"]
all = ["torch", "pandas", "matplotlib", "h5py", "ripser"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/sergeeey/Skeptic-Engine-2026-"
Documentation = "https://doi.org/10.5281/zenodo.19238786"

[project.scripts]
skeptic-toolkit = "skeptic_toolkit.cli:main"
